# pipeline-horario

./: .gitignore  Dockerfile  README.md  backfill.py  main.py  prefect.toml  prefect.yaml  pyproject.toml  pytest.ini  requirements.txt
config/: pollutants.py  settings.py
docs/: ARCHITECTURE_OVERVIEW.md  BACKFILL.md  BLOCKS_EXAMPLE.md  BLOCKS_EXPLANATION.md  load-service-key.md
flows/: __init__.py  pipeline_horario.py
scripts/: create_blocks.py
src/: __init__.py  main.py
src/bigquery/: __init__.py  client.py  repository.py
src/config/: __init__.py  pollutants.py  settings.py
src/exporters/: __init__.py  bigquery_exporter.py  excel_exporter.py  motherduck_exporter.py
src/extract/: __init__.py  db_extractor.py  validators.py
src/influxdb/: __init__.py  client.py  repository.py
src/load/: __init__.py  bigquery.py  motherduck.py
src/motherduck/: __init__.py  client.py
src/orchestation/: pipeline.py
src/pipeline/: __init__.py  orchestrator.py
src/transform/: __init__.py
src/transformers/: __init__.py  pollutant_transformer.py
src/utils/: __init__.py  blocks.py  clients.py  datetime_utils.py  exporters.py  schema.py  state.py  transformers.py  validators.py
tests/: __init__.py  conftest.py
tests/fixtures/: sample_data.json
tests/integration/: test_pipeline.py
tests/unit/: test_datetime_utils.py  test_schema.py  test_transformers.py  test_validators.py
