[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipeline-horario"
version = "0.2.0"
description = "Air quality data pipeline with Prefect 3"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Prefect - Orquestaci贸n
    "prefect>=3.0.0",
    # Procesamiento de datos
    "polars>=1.35.0",
    "pandas>=2.0.0", # Necesario para BigQuery (conversi贸n Polars -> Pandas)
    "pyarrow>=10.0.0", # Necesario para Polars y Arrow (MotherDuck)
    # Bases de datos y almacenamiento
    "influxdb3-python>=0.16.0", # Cliente InfluxDB 3.0
    "google-cloud-bigquery>=3.0.0", # Cliente BigQuery
    "duckdb>=1.0.0", # Cliente MotherDuck
    # Exportaci贸n
    "xlsxwriter>=3.0.0", # Exportar a Excel desde Polars
    # Configuraci贸n
    "python-dotenv>=1.0.0", # Cargar variables de entorno desde .env
    "prefect-gcp>=0.6.12",
    "pandas-gbq>=0.33.0",
]

[project.scripts]
pipeline-horario = "flows.pipeline_horario:pipeline_horario"
backfill = "backfill:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["config", "flows", "src.utils"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]
